--- a/disclaimer_supercell.html
+++ b/disclaimer_supercell.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
 
-    <title>MapleLeaf Studio</title>
+    <title>Giant Potato Studio</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -39,12 +39,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">Big Melon Studio</a>
+          <a class="navbar-brand" href="index.html">Giant Potato Studio</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="https://play.google.com/store/apps/developer?id=BigMelon+Studio">Google Play</a></li>
-            <li><a href="mailto:kyeloacheonra@gmail.com">Contact</a></li>
+            <li><a href="https://play.google.com/store/apps/developer?id=GiantPotato+Studio">Google Play</a></li>
+            <li><a href="mailto:elainadanated@gmail.com">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -70,7 +70,7 @@
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-12">
-					<p>Fresh Melon Apps are delivered to your mobiles for free!</p>
+					<p>Giant Potato Apps are delivered to your mobiles for free!</p>
 				</div><!-- /col-lg-4 -->
 			
 			</div>
